@@ -1,3 +1,9 @@
+2010-02-02  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/syscfg.h: Attempt to fix build problem under Sun Studio (no
+	definition for _Bool).
+	Bug #2915835
+
 2010-02-01  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/canvas.trm: Fix typo in javascript output.
